--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
 buildscript {
 	repositories {
 		mavenCentral()
+		jcenter()
+		maven {
+			url "https://plugins.gradle.org/m2/"
+    	}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.5.RELEASE")
+		classpath('org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8.0.1969')
+		classpath('org.springframework.boot:spring-boot-gradle-plugin:2.2.5.RELEASE')
 	}
 }
 
@@ -14,6 +20,8 @@ apply plugin: 'maven'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'jacoco'
+apply plugin: 'org.sonarqube'
 
 jar {
 	baseName = projectName
@@ -41,12 +49,15 @@ dependencies {
 	compile('com.offbytwo.jenkins:jenkins-client:0.3.8')
 	compile('org.modelmapper:modelmapper:2.3.6')
 	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.1.RELEASE')
-	
+	compile('com.fasterxml.jackson.core:jackson-core:2.10.2')
+	compile('com.fasterxml.jackson.core:jackson-annotations:2.10.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
 	compile('io.springfox:springfox-swagger2:2.9.2')
 	
 	compileOnly('io.atlassian.fugue:fugue:4.7.2')
 
+	compile('com.google.code.gson:gson:2.8.6')
+	compileOnly 'org.projectlombok:lombok:1.18.4'
+	annotationProcessor ('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.boot:spring-boot-starter-test:2.2.5.RELEASE')
 }
