--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@ org.gradle.parallel=true
 projectName=apiConnectors
 projectVersion=1.1
 projectDesc=API Connectors for connecting with Jira, Slack etc..
-systemProp.sonar.host.url=http://18.221.221.106:9000
+systemProp.sonar.host.url=https://sqprod.opsera.io/
 systemProp.sonar.sourceEncoding=UTF-8
